--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <section class="content">
         <h1>I’m Brenda<br>
             Glad to see<br> you!</h1>
-        <p>I’m a software developer! I can help you build a product , feature or website Look through some of my work
+        <p>I’m a software developer! I can help you build a product , feature or website Look through
+            some of my work
             and
             experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         <h2><a href="#"> Let's connect</a></h2>
@@ -36,6 +37,203 @@
             <li><a href="#" class="GitHub"><img src="./images/github.svg" alt="GitHub"></a></li>
             <li><a href="#" class="peace"><img src="./images/peace.svg" alt="peace"></a></li>
         </ul>
+    </section>
+
+    <div class="projects-container">
+        <section class="portfolio project-card">
+            <div class="image">
+                <img src="./images/tonic.svg" alt="Image1">
+            </div>
+            <div class="background">
+                <h2 class="p-title">Tonic</h2>
+                <ul class="subwork">
+                    <li class="work1">CANOPY</li>
+                    <li>
+                        <img src="./images/Counter.svg" alt="bullet">
+                    </li>
+                    <li>Back End Dev</li>
+                    <li>
+                        <img src="./images/Counter.svg" alt="bullet">
+                    </li>
+                    <li>2015</li>
+                </ul>
+            </div>
+            <p class="about">
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required.
+            </p>
+
+            <ul class="languages">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+            <div><button class="clickme" type="button">See Projects</button></div>
+        </section>
+        <!-- </section> -->
+
+
+        <section class="skills project-card">
+            <div class="image">
+                <img src="./images/portfolio2.png" alt="Image2">
+            </div>
+
+            <div class="backgd">
+                <h2 class="p-title">Multi-post <br> stories</h2>
+                <ul class="subwork">
+                    <li class="work1">CANOPY</li>
+                    <li>
+                        <img src="./images/Counter.svg" alt="">
+                    </li>
+                    <li>Back End Dev</li>
+                    <li>
+                        <img src="./images/Counter.svg" alt="">
+                    </li>
+                    <li>2015</li>
+
+                </ul>
+            </div>
+
+            <p class="about">
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required.
+            </p>
+
+            <ul class="languages">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+            <div><button class="clickme" type="button">See Projects</button></div>
+        </section>
+    </div>
+
+    <section class="skills project-card">
+        <div class="image">
+            <img src="./images/portfolio3.png" alt="Image3">
+            <div class="stories">
+                <h2 class="p-title">Tonic</h2>
+                <ul class="subwork">
+                    <li class=work1>CANOPY</li>
+                    <li>
+                        <img src="./images/Counter.svg" alt="">
+                    </li>
+                    <li>Back End Dev</li>
+                    <li>
+                        <img src="./images/Counter.svg" alt="">
+                    </li>
+                    <li>2015</li>
+                </ul>
+
+                <p class="about">
+                    A daily selection of privately personalized reads; no accounts or
+                    sign-ups required.
+                </p>
+
+                <ul class="languages">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+                <div><button class="clickme" type="button">See Projects</button></div>
+            </div>
+        </div>
+    </section>
+
+    <section class="skills project-card">
+        <div class="image">
+            <img src="./images/portfolio4.png" alt="Image3">
+        </div>
+
+        <div class="stories">
+            <h2 class="p-title">Multi-post <br> stories</h2>
+            <ul class="subwork">
+                <li class="work1">CANOPY</li>
+                <li>
+                    <img src="./images/Counter.svg" alt="">
+                </li>
+                <li>Back End Dev</li>
+                <li>
+                    <img src="./images/Counter.svg" alt="">
+                </li>
+                <li>2015</li>
+            </ul>
+        </div>
+
+        <p class="intro-about">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+        </p>
+
+        <ul class="languages">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+        </ul>
+        <div><button class="clickme" type="button">See Project</button></div>
+    </section>
+
+    <section class="about-me">
+        <h3 class="self">About <br> myself</h3>
+        <p class="intro-about">Hello I’m a software developer! I can help you build a product , feature or website Look
+            through
+            some of my work and
+            experience! If you like what you see and have a project you need coded, don’t hestiate to contact
+            me.
+        </p>
+        <h2 class="connect"><a href="#"> Let's connect</a></h2>
+        <ul class="media">
+            <li><a href="#" class="twitter"><img src="./images/twitter.svg" alt="twitter"></a></li>
+            <li><a href="#" class="linkedin"><img src="./images/linkdin.svg" alt="linkdin"></a></li>
+            <li><a href="#" class="Mediam"><img src="./images/median.svg" alt="Mediam"></a></li>
+            <li><a href="#" class="GitHub"><img src="./images/github.svg" alt="GitHub"></a></li>
+            <li><a href="#" class="peace"><img src="./images/peace.svg" alt="peace"></a></li>
+        </ul>
+        <div><button class="clickme" type="button">Get My Resume</button></div>
+        <div class="about-languages">
+            <div class="stacks">
+                <div class="heading">
+                    <h4> Languages </h4>
+                    <span><i class="arrow down"></i></span>
+                </div>
+                <ul>
+                    <li class="lang">
+                        <img src="./images/js.png" alt="JavaScript">
+                        <p>JavaScript</p>
+                    </li>
+
+
+                    <li class="lang">
+                        <img src="./images/html.png" alt="HTML">
+                        <p>HTML</p>
+                    </li>
+
+                    <li class="lang">
+                        <img src="./images/css.png" alt="CSS">
+                        <p>CSS</p>
+                    </li>
+                </ul>
+            </div>
+
+            <div>
+                <ul class="fr-skills">
+                    <li class="framework">
+                        <p>Frameworks</p>
+                        <span>
+                            <i class="arrow right"></i>
+                        </span>
+                    </li>
+                    <hr>
+                    <li class="skills">
+                        <p>skills</p>
+                        <span>
+                            <i class="arrow right"></i>
+                        </span>
+                    </li>
+                    <hr>
+                </ul>
+            </div>
+        </div>
     </section>
 </body>
 
