Add changes to framework, langueges, and skills form p tag to list tag

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </ul>
     </section>
 
-    <div class="projects-container">
-        <section class="portfolio project-card">
+    <section class="projects-container">
+        <div class="portfolio project-card">
             <div class="image">
                 <img src="./images/tonic.svg" alt="Image1">
             </div>
@@ -69,43 +69,43 @@
                 <li>JavaScript</li>
             </ul>
             <div><button class="clickme" type="button">See Projects</button></div>
-        </section>
-        <!-- </section> -->
+    </section>
+    <!-- </section> -->
 
 
-        <section class="skills project-card">
-            <div class="image">
-                <img src="./images/portfolio2.png" alt="Image2">
-            </div>
+    <section class="skills project-card">
+        <div class="image">
+            <img src="./images/portfolio2.png" alt="Image2">
+        </div>
 
-            <div class="backgd">
-                <h2 class="p-title">Multi-post <br> stories</h2>
-                <ul class="subwork">
-                    <li class="work1">CANOPY</li>
-                    <li>
-                        <img src="./images/Counter.svg" alt="">
-                    </li>
-                    <li>Back End Dev</li>
-                    <li>
-                        <img src="./images/Counter.svg" alt="">
-                    </li>
-                    <li>2015</li>
+        <div class="backgd">
+            <h2 class="p-title">Multi-post <br> stories</h2>
+            <ul class="subwork">
+                <li class="work1">CANOPY</li>
+                <li>
+                    <img src="./images/Counter.svg" alt="">
+                </li>
+                <li>Back End Dev</li>
+                <li>
+                    <img src="./images/Counter.svg" alt="">
+                </li>
+                <li>2015</li>
 
-                </ul>
-            </div>
-
-            <p class="about">
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required.
-            </p>
-
-            <ul class="languages">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
             </ul>
-            <div><button class="clickme" type="button">See Projects</button></div>
-        </section>
+        </div>
+
+        <p class="about">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+        </p>
+
+        <ul class="languages">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+        </ul>
+        <div><button class="clickme" type="button">See Projects</button></div>
+    </section>
     </div>
 
     <section class="skills project-card">
@@ -174,14 +174,14 @@
     </section>
 
     <section class="about-me">
-        <h3 class="self">About <br> myself</h3>
+        <h3 class="self">About <br> Myself</h3>
         <p class="intro-about">Hello I’m a software developer! I can help you build a product , feature or website Look
             through
             some of my work and
             experience! If you like what you see and have a project you need coded, don’t hestiate to contact
             me.
         </p>
-        <h2 class="connect"><a href="#"> Let's connect</a></h2>
+        <h2 class = connect ><a href="#"> Let's connect</a></h2>
         <ul class="media">
             <li><a href="#" class="twitter"><img src="./images/twitter.svg" alt="twitter"></a></li>
             <li><a href="#" class="linkedin"><img src="./images/linkdin.svg" alt="linkdin"></a></li>
@@ -193,48 +193,41 @@
         <div class="about-languages">
             <div class="stacks">
                 <div class="heading">
-                    <h4> Languages </h4>
+                    <h4> Langguages </h4>
                     <span><i class="arrow down"></i></span>
                 </div>
                 <ul>
-                    <li class="lang">
+                    <ul class="lang">
                         <img src="./images/js.png" alt="JavaScript">
-                        <p>JavaScript</p>
-                    </li>
+                        <li>JavaScript</li>
+                    </ul>
 
 
-                    <li class="lang">
+                    <ul class="lang">
                         <img src="./images/html.png" alt="HTML">
-                        <p>HTML</p>
-                    </li>
+                        <li>HTML</li>
+                    </ul>
 
-                    <li class="lang">
+                    <ul class="lang">
                         <img src="./images/css.png" alt="CSS">
-                        <p>CSS</p>
-                    </li>
-                </ul>
+                        <li>CSS</li>
+                    </ul>
             </div>
 
-            <div>
-                <ul class="fr-skills">
-                    <li class="framework">
-                        <p>Frameworks</p>
-                        <span>
-                            <i class="arrow right"></i>
-                        </span>
-                        <hr>
-                    </li>
 
-                    <li class="skills">
-                        <p>skills</p>
-                        <span>
-                            <i class="arrow right"></i>
-                        </span>
-                        <hr>
-                    </li>
+            <div class="fr-skills">
+                <ul class="framework">
+                    <li>Frameworks </li>
+                    <span><i class="arrow right"></i></spa>
                 </ul>
+                <hr>
+                <ul class="framework">
+                    <li>Skills</li>
+                    <span><i class="arrow right"></i></span>
+                </ul>
+                <hr>
             </div>
-        </div>
+
     </section>
 </body>
 
