--- a/index.html
+++ b/index.html
@@ -58,17 +58,18 @@
                     <li>2015</li>
                 </ul>
             </div>
-            <p class="about">
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required.
-            </p>
+        </div>
+        <p class="about">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+        </p>
 
-            <ul class="languages">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-            </ul>
-            <div><button class="clickme" type="button">See Projects</button></div>
+        <ul class="languages">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+        </ul>
+        <div><button class="clickme" type="button">See Projects</button></div>
     </section>
     <!-- </section> -->
 
@@ -106,7 +107,7 @@
         </ul>
         <div><button class="clickme" type="button">See Projects</button></div>
     </section>
-    </div>
+
 
     <section class="skills project-card">
         <div class="image">
@@ -181,7 +182,7 @@
             experience! If you like what you see and have a project you need coded, don’t hestiate to contact
             me.
         </p>
-        <h2 class = connect ><a href="#"> Let's connect</a></h2>
+        <h2 class=connect><a href="#"> Let's connect</a></h2>
         <ul class="media">
             <li><a href="#" class="twitter"><img src="./images/twitter.svg" alt="twitter"></a></li>
             <li><a href="#" class="linkedin"><img src="./images/linkdin.svg" alt="linkdin"></a></li>
@@ -196,37 +197,47 @@
                     <h4> Langguages </h4>
                     <span><i class="arrow down"></i></span>
                 </div>
-                <ul>
-                    <ul class="lang">
-                        <img src="./images/js.png" alt="JavaScript">
+
+                <div class="lang">
+                    <img src="./images/js.png" alt="JavaScript">
+                    <ul>
                         <li>JavaScript</li>
                     </ul>
+                </div>
 
 
-                    <ul class="lang">
-                        <img src="./images/html.png" alt="HTML">
+                <div class="lang">
+                    <img src="./images/html.png" alt="HTML">
+                    <ul>
                         <li>HTML</li>
                     </ul>
+                </div>
 
-                    <ul class="lang">
-                        <img src="./images/css.png" alt="CSS">
+                <div class="lang">
+                    <img src="./images/css.png" alt="CSS">
+                    <ul>
                         <li>CSS</li>
                     </ul>
+                </div>
             </div>
+        </div>
 
-
-            <div class="fr-skills">
-                <ul class="framework">
+        <div class="fr-skills">
+            <div class="framework">
+                <ul>
                     <li>Frameworks </li>
-                    <span><i class="arrow right"></i></spa>
                 </ul>
-                <hr>
-                <ul class="framework">
-                    <li>Skills</li>
-                    <span><i class="arrow right"></i></span>
-                </ul>
-                <hr>
+                <span><i class="arrow right"></i></span>
             </div>
+            <hr>
+            <div class="framework">
+                <ul>
+                    <li>Skills</li>
+                </ul>
+                <span><i class="arrow right"></i></span>
+            </div>
+            <hr>
+        </div>
 
     </section>
 </body>
