Add new font-family link to html file

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -29,7 +31,7 @@
             some of my work
             and
             experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
-        <h2><a href="#"> Let's connect</a></h2>
+        <p><a href="#"> Let's connect</a></p>
         <ul class="media">
             <li><a href="#" class="twitter"><img src="./images/twitter.svg" alt="twitter"></a></li>
             <li><a href="#" class="linkedin"><img src="./images/linkdin.svg" alt="linkdin"></a></li>
@@ -58,20 +60,20 @@
                     <li>2015</li>
                 </ul>
             </div>
-        </div>
-        <p class="about">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-        </p>
+            <p class="about">
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required.
+            </p>
 
-        <ul class="languages">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-        </ul>
-        <div><button class="clickme" type="button">See Projects</button></div>
+            <ul class="languages">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+            <div><button class="clickme" type="button">See Projects</button></div>
+        </div>
     </section>
-    <!-- </section> -->
+
 
 
     <section class="skills project-card">
@@ -182,7 +184,7 @@
             experience! If you like what you see and have a project you need coded, don’t hestiate to contact
             me.
         </p>
-        <h2 class=connect><a href="#"> Let's connect</a></h2>
+        <p class=connect><a href="#"> Let's connect</a></p>
         <ul class="media">
             <li><a href="#" class="twitter"><img src="./images/twitter.svg" alt="twitter"></a></li>
             <li><a href="#" class="linkedin"><img src="./images/linkdin.svg" alt="linkdin"></a></li>
