Adjust the button text styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="./style.css" />
@@ -292,7 +292,7 @@
     <!-- contact form section -->
     <section class="contact-form">
       <div class="contact-description">
-        <h2>Contact me</h2>
+        <h2 class>Contact me</h2>
         <p>
           If you have an application you are interested in developing, a feature
           that you need built or a project that need coding. I’d love to help
