--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 
@@ -21,12 +21,17 @@
             <a href="#" class="menu">
                 <img src="./images/Union.svg" alt="Menu" />
             </a>
+            <ul class=nav-menu>
+                <li>Portfolio</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
         </nav>
     </header>
     <section class="content">
         <h1>
             I’m Brenda<br />
-            Glad to see<br />
+            Glad to see
             you!
         </h1>
         <p>
