--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 
@@ -28,19 +28,19 @@
             </ul>
         </nav>
     </header>
-    <section class="content">
-        <h1>
+    <section class="content cont-header">
+        <h1 class= "title">
             I’m Brenda<br />
             Glad to see
             you!
         </h1>
-        <p>
+        <p class="p-header">
             I’m a software developer! I can help you build a product , feature or
             website Look through some of my work and experience! If you like what
             you see and have a project you need coded, don’t hestiate to contact me.
         </p>
-        <p><a href="#"> Let's connect</a></p>
-        <ul class="media">
+        <p class="media-link"><a href="#"> Let's connect</a></p>
+        <ul class="media d-media">
             <li>
                 <a href="#" class="twitter"><img src="./images/twitter.svg" alt="twitter" /></a>
             </li>
@@ -58,8 +58,8 @@
             </li>
         </ul>
     </section>
-
-    <section class="projects-container">
+<!--section2-->
+    <section class="projects-container d-project-card>
         <div class="portfolio project-card">
             <div class="image">
                 <img src="./images/tonic.svg" alt="Image1" />
@@ -91,8 +91,8 @@
             <div><button class="clickme" type="button">See Projects</button></div>
         </div>
     </section>
-
-    <section class="skills project-card">
+<!--section3-->
+    <section class="skills project-card d-project-card2">
         <div class="image">
             <img src="./images/portfolio2.png" alt="Image2" />
         </div>
@@ -127,7 +127,7 @@
         </ul>
         <div><button class="clickme" type="button">See Projects</button></div>
     </section>
-
+<!--section4-->
     <section class="skills project-card">
         <div class="image">
             <img src="./images/portfolio3.png" alt="Image3" />
