--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 
@@ -22,25 +23,25 @@
                 <img src="./images/Union.svg" alt="Menu" />
             </a>
             <ul class=nav-menu>
-                <li>Portfolio</li>
-                <li>About</li>
-                <li>Contact</li>
+                <li><a href class="nav-portfolio">Portfolio</a></li>
+                <li><a href class="nav-about">About</a></li>
+                <li><a href class="nav-connect">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <section class="content cont-header">
-        <h1 class= "title">
+    <section class="content">
+        <h1>
             I’m Brenda<br />
             Glad to see
             you!
         </h1>
-        <p class="p-header">
+        <p>
             I’m a software developer! I can help you build a product , feature or
             website Look through some of my work and experience! If you like what
             you see and have a project you need coded, don’t hestiate to contact me.
         </p>
-        <p class="media-link"><a href="#"> Let's connect</a></p>
-        <ul class="media d-media">
+        <p class="connect"><a href="#"> Let's connect</a></p>
+        <ul class="media">
             <li>
                 <a href="#" class="twitter"><img src="./images/twitter.svg" alt="twitter" /></a>
             </li>
@@ -58,9 +59,9 @@
             </li>
         </ul>
     </section>
-<!--section2-->
-    <section class="projects-container d-project-card>
-        <div class="portfolio project-card">
+    <!--section2-->
+    <section class="projects-container">
+        <div class="project-card">
             <div class="image">
                 <img src="./images/tonic.svg" alt="Image1" />
             </div>
@@ -77,7 +78,43 @@
                     </li>
                     <li>2015</li>
                 </ul>
+                <p class="about">
+                    A daily selection of privately personalized reads; no accounts or
+                    sign-ups required.
+                </p>
+                <ul class="languages">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+                <div><button class="clickme" type="button">See Projects</button></div>
             </div>
+        </div>
+    </section>
+    <!--section3-->
+    <section class="project-card row-rev">
+        <div class=" image">
+            <img src="./images/portfolio2.png" alt="Image2" />
+        </div>
+
+        <div class="background-reverse">
+            <h2 class="p-title">
+                Multi-post <br />
+                stories
+            </h2>
+            <ul class="subwork">
+                <li class="work1">CANOPY</li>
+                <li>
+                    <img src="./images/Counter.svg" alt="" />
+                </li>
+                <li>Back End Dev</li>
+                <li>
+                    <img src="./images/Counter.svg" alt="" />
+                </li>
+                <li>2015</li>
+            </ul>
+
+
             <p class="about">
                 A daily selection of privately personalized reads; no accounts or
                 sign-ups required.
@@ -91,17 +128,13 @@
             <div><button class="clickme" type="button">See Projects</button></div>
         </div>
     </section>
-<!--section3-->
-    <section class="skills project-card d-project-card2">
+    <!--section4-->
+    <section class="project-card">
         <div class="image">
-            <img src="./images/portfolio2.png" alt="Image2" />
+            <img src="./images/portfolio3.png" alt="Image3" />
         </div>
-
-        <div class="backgd">
-            <h2 class="p-title">
-                Multi-post <br />
-                stories
-            </h2>
+        <div class="background">
+            <h2 class="p-title">Tonic</h2>
             <ul class="subwork">
                 <li class="work1">CANOPY</li>
                 <li>
@@ -113,59 +146,27 @@
                 </li>
                 <li>2015</li>
             </ul>
-        </div>
 
-        <p class="about">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-        </p>
+            <p class="about">
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required.
+            </p>
 
-        <ul class="languages">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-        </ul>
-        <div><button class="clickme" type="button">See Projects</button></div>
-    </section>
-<!--section4-->
-    <section class="skills project-card">
-        <div class="image">
-            <img src="./images/portfolio3.png" alt="Image3" />
-            <div class="stories">
-                <h2 class="p-title">Tonic</h2>
-                <ul class="subwork">
-                    <li class="work1">CANOPY</li>
-                    <li>
-                        <img src="./images/Counter.svg" alt="" />
-                    </li>
-                    <li>Back End Dev</li>
-                    <li>
-                        <img src="./images/Counter.svg" alt="" />
-                    </li>
-                    <li>2015</li>
-                </ul>
-
-                <p class="about">
-                    A daily selection of privately personalized reads; no accounts or
-                    sign-ups required.
-                </p>
-
-                <ul class="languages">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                </ul>
-                <div><button class="clickme" type="button">See Projects</button></div>
-            </div>
+            <ul class="languages">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+            <div><button class="clickme" type="button">See Projects</button></div>
         </div>
     </section>
-
-    <section class="skills project-card">
+    <!--section5-->
+    <section class="project-card row-rev">
         <div class="image">
             <img src="./images/portfolio4.png" alt="Image3" />
         </div>
 
-        <div class="stories">
+        <div class="background">
             <h2 class="p-title">
                 Multi-post <br />
                 stories
@@ -181,22 +182,22 @@
                 </li>
                 <li>2015</li>
             </ul>
+
+            <p class="about">
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required.
+            </p>
+
+            <ul class="languages">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+            <div><button class="clickme" type="button">See Project</button></div>
         </div>
-
-        <p class="intro-about">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
-        </p>
-
-        <ul class="languages">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-        </ul>
-        <div><button class="clickme" type="button">See Project</button></div>
     </section>
-
-    <section class="about-me">
+<section class="my-intro">
+    <div class="about-me">
         <h3 class="self">
             About <br />
             Myself
@@ -225,52 +226,54 @@
             </li>
         </ul>
         <div><button class="clickme" type="button">Get My Resume</button></div>
-        <div class="about-languages">
-            <div class="stacks">
-                <div class="heading">
-                    <h4>Langguages</h4>
-                    <span><i class="arrow down"></i></span>
-                </div>
+    </div>
+    <div class="about-languages">
+        <div class="stacks">
+            <div class="heading">
+                <h4>Langguages</h4>
+                <span><i class="arrow down"></i></span>
+            </div>
 
-                <div class="lang">
-                    <img src="./images/js.png" alt="JavaScript" />
-                    <ul>
-                        <li>JavaScript</li>
-                    </ul>
-                </div>
+            <div class="lang">
+                <img src="./images/js.png" alt="JavaScript" />
+                <ul>
+                    <li>JavaScript</li>
+                </ul>
+            </div>
 
-                <div class="lang">
-                    <img src="./images/html.png" alt="HTML" />
-                    <ul>
-                        <li>HTML</li>
-                    </ul>
-                </div>
+            <div class="lang">
+                <img src="./images/html.png" alt="HTML" />
+                <ul>
+                    <li>HTML</li>
+                </ul>
+            </div>
 
-                <div class="lang">
-                    <img src="./images/css.png" alt="CSS" />
-                    <ul>
-                        <li>CSS</li>
-                    </ul>
-                </div>
+            <div class="lang">
+                <img src="./images/css.png" alt="CSS" />
+                <ul>
+                    <li>CSS</li>
+                </ul>
             </div>
         </div>
+    
 
-        <div class="fr-skills">
-            <div class="framework">
-                <ul>
-                    <li>Frameworks</li>
-                </ul>
-                <span><i class="arrow right"></i></span>
-            </div>
-            <hr />
-            <div class="framework">
-                <ul>
-                    <li>Skills</li>
-                </ul>
-                <span><i class="arrow right"></i></span>
-            </div>
-            <hr />
+    <div class="fr-skills">
+        <div class="framework">
+            <ul>
+                <li>Frameworks</li>
+            </ul>
+            <span><i class="arrow right"></i></span>
         </div>
+        <hr />
+        <div class="framework">
+            <ul>
+                <li>Skills</li>
+            </ul>
+            <span><i class="arrow right"></i></span>
+        </div>
+        <hr />
+    </div>
+    </div>
     </section>
     <!-- contact form section -->
     <section class="contact-form">
@@ -287,7 +290,7 @@
             <div class="name name-emailv">
                 <input class="name-email" type="text" name="name" placeholder="Yeremias" maxlength="30" required />
             </div>
-            <div class="email-field name-emailv">
+            <div class="email-field name-email">
                 <input class="name-email" type="email" name="email-address" placeholder="natajayanj14@gmail.com"
                     required />
             </div>
