Fixed linter errors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
@@ -23,9 +23,9 @@
                 <img src="./images/Union.svg" alt="Menu" />
             </a>
             <ul class=nav-menu>
-                <li><a href class="nav-portfolio">Portfolio</a></li>
-                <li><a href class="nav-about">About</a></li>
-                <li><a href class="nav-connect">Contact</a></li>
+                <li><a href="#" class="nav-portfolio">Portfolio</a></li>
+                <li><a href="#" class="nav-about">About</a></li>
+                <li><a href="#" class="nav-connect">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -93,11 +93,11 @@
     </section>
     <!--section3-->
     <section class="project-card row-rev">
-        <div class=" image">
+        <div class="image">
             <img src="./images/portfolio2.png" alt="Image2" />
         </div>
 
-        <div class="background-reverse">
+        <div class="background">
             <h2 class="p-title">
                 Multi-post <br />
                 stories
