Apply changes in css

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
             </li>
         </ul>
     </section>
+
+    
     <!--section2-->
     <section class="projects-container">
         <div class="project-card">
@@ -91,8 +93,10 @@
             </div>
         </div>
     </section>
+
+
     <!--section3-->
-    <section class="project-card row-rev">
+    <section class=" projects-container project-card row-rev">
         <div class="image">
             <img src="./images/portfolio2.png" alt="Image2" />
         </div>
@@ -128,8 +132,10 @@
             <div><button class="clickme" type="button">See Projects</button></div>
         </div>
     </section>
+
+
     <!--section4-->
-    <section class="project-card">
+    <section class="projects-container project-card">
         <div class="image">
             <img src="./images/portfolio3.png" alt="Image3" />
         </div>
@@ -160,8 +166,11 @@
             <div><button class="clickme" type="button">See Projects</button></div>
         </div>
     </section>
+
+
+
     <!--section5-->
-    <section class="project-card row-rev">
+    <section class=" projects-container project-card row-rev">
         <div class="image">
             <img src="./images/portfolio4.png" alt="Image3" />
         </div>
@@ -255,8 +264,6 @@
                 </ul>
             </div>
         </div>
-    
-
     <div class="fr-skills">
         <div class="framework">
             <ul>
@@ -271,10 +278,13 @@
             </ul>
             <span><i class="arrow right"></i></span>
         </div>
-        <hr />
+        <hr/>
     </div>
     </div>
     </section>
+
+
+
     <!-- contact form section -->
     <section class="contact-form">
         <div class="contact-description">
