Add gtag.js to the page

--- a/Index.html
+++ b/Index.html
@@ -302,7 +302,7 @@
                 with it
             </p>
         </div>
-
+Add gtag.js to your site
         <form class="form-field" action="https://formspree.io/f/mwkyojbz" method="post">
             <div class="name name-emailv">
                 <input class="name-email" type="text" name="name" placeholder="Yeremias" maxlength="30" required />
