Change the title name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Brenda's Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
@@ -304,7 +304,7 @@
                 with it
             </p>
         </div>
-        Add gtag.js to your site
+
         <form class="form-field" action="https://formspree.io/f/mwkyojbz" method="post">
             <div class="name name-emailv">
                 <input class="name-email" type="text" name="name" placeholder="Yeremias" maxlength="30" required />
