Add alt text to some images

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
             <ul class="subwork">
                 <li class="work1">CANOPY</li>
                 <li>
-                    <img src="./images/Counter.svg" alt="" />
+                    <img src="./images/Counter.svg" alt="bullet" />
                 </li>
                 <li>Back End Dev</li>
                 <li>
-                    <img src="./images/Counter.svg" alt="" />
+                    <img src="./images/Counter.svg" alt="bullet" />
                 </li>
                 <li>2015</li>
             </ul>
@@ -153,11 +153,11 @@
             <ul class="subwork">
                 <li class="work1">CANOPY</li>
                 <li>
-                    <img src="./images/Counter.svg" alt="" />
+                    <img src="./images/Counter.svg" alt="bullet" />
                 </li>
                 <li>Back End Dev</li>
                 <li>
-                    <img src="./images/Counter.svg" alt="" />
+                    <img src="./images/Counter.svg" alt="bullet" />
                 </li>
                 <li>2015</li>
             </ul>
@@ -192,11 +192,11 @@
             <ul class="subwork">
                 <li class="work1">CANOPY</li>
                 <li>
-                    <img src="./images/Counter.svg" alt="" />
+                    <img src="./images/Counter.svg" alt="bullet" />
                 </li>
                 <li>Back End Dev</li>
                 <li>
-                    <img src="./images/Counter.svg" alt="" />
+                    <img src="./images/Counter.svg" alt="bullet" />
                 </li>
                 <li>2015</li>
             </ul>
