Add h4 tag to Let's connect  text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             website Look through some of my work and experience! If you like what
             you see and have a project you need coded, don’t hestiate to contact me.
         </p>
-        <p class="connect"><a href="#"> Let's connect</a></p>
+        <h4 class="connect"><a href="#"> Let's connect</a></h4>
         <ul class="media">
             <li>
                 <a href="#" class="twitter"><img src="./images/twitter.svg" alt="twitter" /></a>
@@ -225,7 +225,7 @@
                 or website Look through some of my work and experience! If you like what
                 you see and have a project you need coded, don’t hestiate to contact me.
             </p>
-            <p class="connect"><a href="#"> Let's connect</a></p>
+            <h4 class="connect"><a href="#"> Let's connect</a></h4>
             <ul class="media">
                 <li>
                     <a href="#" class="twitter"><img src="./images/twitter.svg" alt="twitter" /></a>
