--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brenda's Portfolio</title>
+    <title>Brenda Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
@@ -52,55 +52,55 @@
         <h4 class="connect"><a href="#"> Let's connect</a></h4>
         <ul class="media">
             <li>
-                <a href="#" class="twitter"><img src="./images/twitter.svg" alt="twitter" /></a>
+                <a href="#" class="twitter"><img src="./images/twitter.svg" alt="Twitter icon" /></a>
             </li>
             <li>
-                <a href="#" class="linkedin"><img src="./images/linkdin.svg" alt="linkdin" /></a>
+                <a href="#" class="linkedin"><img src="./images/linkdin.svg" alt="Linkdin icon" /></a>
             </li>
             <li>
-                <a href="#" class="Mediam"><img src="./images/median.svg" alt="Mediam" /></a>
+                <a href="#" class="Mediam"><img src="./images/median.svg" alt="Mediam icon" /></a>
             </li>
             <li>
-                <a href="#" class="GitHub"><img src="./images/github.svg" alt="GitHub" /></a>
+                <a href="#" class="GitHub"><img src="./images/github.svg" alt="GitHub icon" /></a>
             </li>
             <li>
-                <a href="#" class="peace"><img src="./images/peace.svg" alt="peace" /></a>
+                <a href="#" class="peace"><img src="./images/peace.svg" alt="Peace icon" /></a>
             </li>
         </ul>
     </section>
 
 
     <!--section2-->
-    <section class="projects-container">
-        <div class="project-card">
-            <div class="image">
-                <img src="./images/tonic.svg" alt="Image1" />
-            </div>
-            <div class="background">
-                <h2 class="p-title">Tonic</h2>
-                <ul class="subwork">
-                    <li class="work1">CANOPY</li>
-                    <li>
-                        <img src="./images/Counter.svg" alt="bullet" />
-                    </li>
-                    <li>Back End Dev</li>
-                    <li>
-                        <img src="./images/Counter.svg" alt="bullet" />
-                    </li>
-                    <li>2015</li>
-                </ul>
-                <p class="about">
-                    A daily selection of privately personalized reads; no accounts or
-                    sign-ups required.
-                </p>
-                <ul class="languages">
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                </ul>
-                <div><button class="clickme" type="button">See Projects</button></div>
-            </div>
+    <section class="projects-container"></section>
+    <div class="project-card">
+        <div class="image">
+            <img src="./images/tonic.svg" alt="Image1" />
         </div>
+        <div class="background">
+            <h2 class="p-title">Tonic</h2>
+            <ul class="subwork">
+                <li class="work1">CANOPY</li>
+                <li>
+                    <img src="./images/Counter.svg" alt="bullet1" />
+                </li>
+                <li>Back End Dev</li>
+                <li>
+                    <img src="./images/Counter.svg" alt="bullet2" />
+                </li>
+                <li>2015</li>
+            </ul>
+            <p class="about">
+                A daily selection of privately personalized reads; no accounts or
+                sign-ups required.
+            </p>
+            <ul class="languages">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+            <div><button class="clickme" type="button">See Projects</button></div>
+        </div>
+    </div>
     </section>
 
 
@@ -118,11 +118,11 @@
             <ul class="subwork">
                 <li class="work1">CANOPY</li>
                 <li>
-                    <img src="./images/Counter.svg" alt="bullet" />
+                    <img src="./images/Counter.svg" alt=" bullet-21" />
                 </li>
                 <li>Back End Dev</li>
                 <li>
-                    <img src="./images/Counter.svg" alt="bullet" />
+                    <img src="./images/Counter.svg" alt="bullet-22" />
                 </li>
                 <li>2015</li>
             </ul>
@@ -153,11 +153,11 @@
             <ul class="subwork">
                 <li class="work1">CANOPY</li>
                 <li>
-                    <img src="./images/Counter.svg" alt="bullet" />
+                    <img src="./images/Counter.svg" alt="bullet31" />
                 </li>
                 <li>Back End Dev</li>
                 <li>
-                    <img src="./images/Counter.svg" alt="bullet" />
+                    <img src="./images/Counter.svg" alt="bullet32" />
                 </li>
                 <li>2015</li>
             </ul>
@@ -225,7 +225,7 @@
                 or website Look through some of my work and experience! If you like what
                 you see and have a project you need coded, don’t hestiate to contact me.
             </p>
-            <h4 class="connect"><a href="#"> Let's connect</a></h4>
+            <h5 class="connect"><a href="#"> Let's connect</a></h5>
             <ul class="media">
                 <li>
                     <a href="#" class="twitter"><img src="./images/twitter.svg" alt="twitter" /></a>
@@ -292,8 +292,6 @@
         </div>
     </section>
 
-
-
     <!-- contact form section -->
     <section class="contact-form">
         <div class="contact-description">
@@ -304,25 +302,25 @@
                 with it
             </p>
         </div>
-
+        Add gtag.js to your site
         <form class="form-field" action="https://formspree.io/f/mwkyojbz" method="post">
-            <div class="name name-emailv">
+            <label class="name name-emailv">
                 <input class="name-email" type="text" name="name" placeholder="Yeremias" maxlength="30" required />
-            </div>
-            <div class="email-field name-email">
+            </label>
+            <label class="email-field name-email">
                 <input class="name-email" type="email" name="email-address" placeholder="natajayanj14@gmail.com"
                     required />
-            </div>
-            <div class="message">
+            </label>
+            <label class="message">
                 <textarea name="user_message" placeholder="Write your message here" maxlength="500" rows="10" cols="25"
                     required></textarea>
-            </div>
+            </label>
             <div class="btn">
                 <button type="submit">Get It Touch</button>
             </div>
 
             <div class="line">
-                <img src="./images/shape.png" alt="line" />
+                <img src="./images/shape.png" alt="Closing black line" />
             </div>
         </form>
     </section>
