fixed linters errors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155595413-1"></script>
     <script>
@@ -12,9 +14,6 @@
         gtag('config', 'UA-155595413-1');
     </script>
 
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brenda Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +24,7 @@
 <body>
     <header class="container">
         <a href="#" class="logo">
-            <img src="./images/logo.svg" alt="Logo" />
+            <img src="./images/logo.svg" alt="My-logo" />
         </a>
         <nav class="navbar">
             <a href="#" class="menu">
@@ -71,36 +70,36 @@
 
 
     <!--section2-->
-    <section class="projects-container"></section>
-    <div class="project-card">
-        <div class="image">
-            <img src="./images/tonic.svg" alt="Image1" />
+    <section class="projects-container">
+        <div class="project-card">
+            <div class="image">
+                <img src="./images/tonic.svg" alt="Image1" />
+            </div>
+            <div class="background">
+                <h2 class="p-title">Tonic</h2>
+                <ul class="subwork">
+                    <li class="work1">CANOPY</li>
+                    <li>
+                        <img src="./images/Counter.svg" alt="bullet1" />
+                    </li>
+                    <li>Back End Dev</li>
+                    <li>
+                        <img src="./images/Counter.svg" alt="bullet2" />
+                    </li>
+                    <li>2015</li>
+                </ul>
+                <p class="about">
+                    A daily selection of privately personalized reads; no accounts or
+                    sign-ups required.
+                </p>
+                <ul class="languages">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+                <div><button class="clickme" type="button">See Projects</button></div>
+            </div>
         </div>
-        <div class="background">
-            <h2 class="p-title">Tonic</h2>
-            <ul class="subwork">
-                <li class="work1">CANOPY</li>
-                <li>
-                    <img src="./images/Counter.svg" alt="bullet1" />
-                </li>
-                <li>Back End Dev</li>
-                <li>
-                    <img src="./images/Counter.svg" alt="bullet2" />
-                </li>
-                <li>2015</li>
-            </ul>
-            <p class="about">
-                A daily selection of privately personalized reads; no accounts or
-                sign-ups required.
-            </p>
-            <ul class="languages">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-            </ul>
-            <div><button class="clickme" type="button">See Projects</button></div>
-        </div>
-    </div>
     </section>
 
 
