--- a/Index.html
+++ b/Index.html
@@ -27,15 +27,16 @@
         <a href="#" class="logo">
             <img src="./images/logo.svg" alt="Logo" />
         </a>
-        <nav class="navbar">
             <a href="#" class="menu">
                 <img src="./images/Union.svg" alt="Menu" />
             </a>
-            <ul class=nav-menu>
-                <li><a href="#" class="nav-portfolio">Portfolio</a></li>
-                <li><a href="#" class="nav-about">About</a></li>
-                <li><a href="#" class="nav-connect">Contact</a></li>
+            <nav class="navbar"></nav>
+            <ul class="nav-menu">
+                <li><a href="#" class="nav-list">Portfolio</a></li>
+                <li><a href="#" class="nav-list">About</a></li>
+                <li><a href="#" class="nav-list">Contact</a></li>
             </ul>
+            <div class="cancel"><a href=""><img src="./images/cancelicon.png" alt=""></a></div>
         </nav>
     </header>
     <section class="content">
@@ -326,6 +327,7 @@
             </div>
         </form>
     </section>
+<script src="./menu.js"></script>
 </body>
 
 </html>
