Fixed linters errors

--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <header class="container" id="">
+    <header class="container">
         <a href="#" class="logo">
             <img src="./images/logo.svg" alt="Logo" />
         </a>
