--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@4400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 
@@ -36,6 +36,11 @@
             <li><a href="#portfolio" class="nav-list">Portfolio</a></li>
             <li><a href="#about" class="nav-list">About</a></li>
             <li><a href="#contact" class="nav-list">Contact</a></li>
+        </ul>
+        <ul class=menu-items>
+            <li><a href="portfolio" class="menu-item">Portfolio</a></li>
+            <li><a href="about" class="menu-item">About</a></li>
+            <li><a href="contact" class="menu-item">Contact</a></li>
         </ul>
         </nav>
     </header>
