Fix the menu background image size

--- a/Index.html
+++ b/Index.html
@@ -2,16 +2,6 @@
 <html lang="en">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155595413-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { window.dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-155595413-1');
-    </script>
-
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,22 +17,18 @@
         <a href="#" class="logo">
             <img src="./images/logo.svg" alt="Logo" />
         </a>
-        <a href="#" class="menu">
-            <img src="./images/Union.svg" alt="Menu" />
-        </a>
-        <nav class="navbar"></nav>
-        <ul class="nav-menu">
-            <li class="cancel"><img src="./images/Icon-Cancel.png" alt=""></li>
-            <li><a href="#portfolio" class="nav-list">Portfolio</a></li>
-            <li><a href="#about" class="nav-list">About</a></li>
-            <li><a href="#contact" class="nav-list">Contact</a></li>
-        </ul>
-        <ul class=menu-items>
-            <li><a href="portfolio" class="menu-item">Portfolio</a></li>
-            <li><a href="about" class="menu-item">About</a></li>
-            <li><a href="contact" class="menu-item">Contact</a></li>
-        </ul>
-        </nav>
+       
+            <a href="#" class="menu">
+                <img src="./images/Union.svg" alt="Menu" />
+            </a>
+            <nav class="navbar">
+                <ul class="nav-menu">
+                <li class="cancel"><img src="./images/Icon-Cancel.png" alt=""></li>
+                <li><a href="#portfolio" class="nav-list">Portfolio</a></li>
+                <li><a href="#about" class="nav-list">About</a></li>
+                <li><a href="#contact" class="nav-list">Contact</a></li>
+                </ul>
+            </nav>
     </header>
     <section class="content">
         <h1>
