Add the popup window section to the html

--- a/Index.html
+++ b/Index.html
@@ -17,18 +17,18 @@
         <a href="#" class="logo">
             <img src="./images/logo.svg" alt="Logo" />
         </a>
-       
-            <a href="#" class="menu">
-                <img src="./images/Union.svg"  alt="Menu" />
-            </a>
-            <nav class="navbar">
-                <ul class="nav-menu">
+
+        <a href="#" class="menu">
+            <img src="./images/Union.svg" alt="Menu" />
+        </a>
+        <nav class="navbar">
+            <ul class="nav-menu">
                 <li class="cancel"><img src="./images/Icon-Cancel.png" alt=""></li>
                 <li><a href="#portfolio" class="nav-list">Portfolio</a></li>
                 <li><a href="#about" class="nav-list">About</a></li>
                 <li><a href="#contact" class="nav-list">Contact</a></li>
-                </ul>
-            </nav>
+            </ul>
+        </nav>
     </header>
     <section class="content">
         <h1>
@@ -65,7 +65,7 @@
     <!--section2-->
     <section class="projects-container" id="portfolio">
         <div class="project-card">
-            <div class="image">
+            <div class="image" id="image">
                 <img src="./images/tonic.svg" alt="Image1" />
             </div>
             <div class="background">
@@ -91,6 +91,7 @@
                     <li>JavaScript</li>
                 </ul>
                 <div><button class="clickme" type="button">See Projects</button></div>
+
             </div>
         </div>
     </section>
@@ -296,7 +297,6 @@
                 with it
             </p>
         </div>
-        Add gtag.js to your site
         <form class="form-field" action="https://formspree.io/f/mwkyojbz" method="post">
             <div class="name name-emailv">
                 <input class="name-email" type="text" name="name" placeholder="Yeremias" maxlength="30" required />
@@ -317,6 +317,48 @@
                 <img src="./images/shape.png" alt="line" />
             </div>
         </form>
+    </section>
+    <!--section Popup-->
+
+    <section class="popup-window">
+        <div class="project-card">
+            <div class="background">
+                <h2 class="p-title">Tonic</h2>
+                <div class="close"><img src="./images/xicon.png" alt=""></div>
+                <ul class="subwork">
+                    <li class="work1">CANOPY</li>
+                    <li>
+                        <img src="./images/Counter.svg" alt="bullet" />
+                    </li>
+                    <li>Back End Dev</li>
+                    <li>
+                        <img src="./images/Counter.svg" alt="bullet" />
+                    </li>
+                    <li>2015</li>
+                </ul>
+                <div class="image" id="image">
+                    <img src="./images/tonic.svg" alt="Image1" />
+                </div>
+                <p class="about">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standarddummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type
+                    specimen book. It has survived not only five centuries, but also the leap into
+                    electronic typesetting, remaining essent
+                </p>
+                <ul class="languages">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+                <div>
+                    <button class="clickme" type="button">See live <img src="./images/livecode.png"
+                            alt="blue GitHub icon"></button>
+                    <button class="clickme" type="button">See code <img src="./images/bluegithub.png"
+                            alt="live code view icon"></button>
+                </div>
+            </div>
+        </div>
     </section>
     <script src="./menu.js"></script>
 </body>
