Add the validation on contact form

--- a/Index.html
+++ b/Index.html
@@ -151,7 +151,7 @@
 
 
     <!-- contact form section -->
-    <section class="contact-form" id="contact">
+    <section class="contact-form">
         <div class="contact-description">
             <h2 class>Contact me</h2>
             <p>
@@ -160,9 +160,10 @@
                 with it
             </p>
         </div>
-        <form class="form-field" action="https://formspree.io/f/mwkyojbz" method="post">
+        <form class="form-field" id="contact" action="https://formspree.io/f/mwkyojbz" method="post">
             <div class="name name-emailv">
-                <input class="name-email" type="text" name="name" placeholder="Yeremias" maxlength="30" required />
+                <input class="name-email" type="text" name="name" placeholder="Yeremias" minlength="3" maxlength="30"
+                    pattern="[A-Za-z ]{1,30}" required />
             </div>
             <div class="email-field name-email">
                 <input class="name-email" type="email" name="email-address" placeholder="natajayanj14@gmail.com"
@@ -173,8 +174,9 @@
                     required></textarea>
             </div>
             <div class="btn">
-                <button type="submit">Get It Touch</button>
+                <button type="submit" id="mail">Get It Touch</button>
             </div>
+            <div class="invalidError" id="invalidError"></div>
 
             <div class="line">
                 <img src="./images/shape.png" alt="line" />
