Fix linters error.

--- a/Index.html
+++ b/Index.html
@@ -65,7 +65,7 @@
 
     <!--Cards container-->
     <section class="cards-container">
-
+<h6>.</h6>
     </section>
 
 
@@ -173,15 +173,13 @@
                 <textarea name="user_message" placeholder="Write your message here" maxlength="500" rows="10" cols="25"
                     required></textarea>
             </div>
+            <div class="invalidError" id="invalidError"></div>
             <div class="btn">
-                <button type="submit" id="mail">Get It Touch</button>
+                <button type="submit">Get It Touch</button>
             </div>
-            
-
             <div class="line">
                 <img src="./images/shape.png" alt="line" />
             </div>
-            <div class="invalidError" id="invalidError"></div>
         </form>
     </section>
     <script src="./menu.js"></script>
